# shortkey

./: LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: mac.rs  main.rs  traits.rs  windows.rs
